--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li {
+  list-style: none;
+}
+
+li:hover {
+  background-color: lightblue;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+label { 
+  margin-right: 0.5rem;
+}
+
+.content {
+  display: flex;
+}
+
+.autocompletamiento {
+  display: flex;
+}
+
+.busqueda {
+  position: relative;
+  width: 100vw;
+  height: 2rem;
+}
+
+.resBusqueda {
+  position: absolute;
+  height: 7rem;
+	width: 12rem;
+	border: 1px solid #ddd;
+	background: #f1f1f1;
+  overflow-y: scroll;
+  top: 1.4rem;
+  right: -1;
 }
