--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -6,7 +6,8 @@
   --medium: #999999;
   --dark: #000;
   --bright: #fff;
-  --blue: blue;
+  --blue: #195FF7;
+  --lgray: #F8F8F8;
   --ko: #e92119;
   --ok: #3c8c20;
 
