--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,5 +2,5 @@
   display: flex;
   align-items: center;
   padding: var(--space-md);
-  background-color: lightgray;
+  background-color: var(--lgray);
 }
