--- a/src/css/index.css
+++ b/src/css/index.css
@@ -157,3 +157,90 @@ ul.review-list {
 ul.review-list .box-header h5 {
   background: var(--lgray);
 }
+
+/**
+CSS para HOME
+**/
+
+section.search-reviews,
+.top-companies {
+  margin-top: 1rem;
+}
+
+section.search-reviews,
+.top-companies h3 {
+  text-align: center;
+  text-transform: none;
+}
+
+/**
+CSS para company
+**/
+
+main.company {
+  margin-top: 1rem;
+}
+
+main.company h3 {
+  text-align: center;
+  text-transform: none;
+}
+
+main.company h4,
+h5 {
+  text-transform: none;
+}
+
+header.box-header {
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+section.box-section {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+ul.select-box {
+  list-style: none;
+  display: grid;
+}
+
+ul.review-list {
+  list-style: none;
+  margin: 1rem;
+  padding: 1rem, 2rem;
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: auto;
+}
+
+ul.review-list .box-header h5 {
+  background: var(--lgray);
+}
+
+section.box-flex {
+  display: flex;
+  margin: 0.5rem;
+}
+
+button.btn {
+  text-transform: none;
+  font-size: 75%;
+  margin-right: 0.5rem;
+}
+
+/**
+CSS para advanced search
+**/
+
+section.box-flex {
+  display: flex;
+  margin: 0.5rem;
+}
+
+button.btn {
+  text-transform: none;
+  font-size: 75%;
+  margin-right: 0.5rem;
+}
