--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,9 +1,9 @@
 :root {
   /* colors */
   --dark: #000;
-  --bright: #FFFF;
-  --blue: #195FF7;
-  --lgray: #F8F8F8;
+  --bright: #ffff;
+  --blue: #195ff7;
+  --lgray: #f8f8f8;
   --gray: #909090;
   --ko: #e92119;
 
