--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -3,6 +3,7 @@
   --dark: #000;
   --bright: #ffff;
   --blue: #195ff7;
+  --darkblue:#003399;
   --lgray: #f8f8f8;
   --gray: #909090;
   --ko: #e92119;
