Filtro empresa en home, componente lista reviews, link top ten, report y delete reviews

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,15 @@ nav > a {
   font-weight: 900;
 }
 
+.cursorPointer {
+  cursor: pointer;
+}
+
+fieldset {
+  border: 1px solid var(--lgray);
+  padding: 0 1rem;
+}
+
 /* CONTAINER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .wrapper {
