--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,6 +69,21 @@ select {
   width: 250px;
 }
 
+.findCity {
+  position: relative;
+}
+
+.resFindCity {
+  position: absolute;
+  height: 8rem;
+	width: 16rem;
+	border: 1px solid #ddd;
+	background: var(--lgray);
+  overflow-y: scroll;
+  top: 2.5rem;
+  z-index:9;
+}
+
 /* CONTAINER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .wrapper {
@@ -133,6 +148,10 @@ input:checked ~ span {
   border-color: black;
   font-weight: bold;
   text-decoration: underline;
+}
+
+.itemsCities:hover {
+  background-color: var(--blue);
 }
 
 /* MAIN
