--- a/src/css/index.css
+++ b/src/css/index.css
@@ -125,13 +125,11 @@ select {
 }
 
 input:hover ~ span {
-  border-color: black;
-  font-weight: bold;
+  color: var(--darkblue);
 }
 
 input:checked ~ span {
-  border-color: black;
-  font-weight: bold;
+  color: var(--darkblue);
   text-decoration: underline;
 }
 
@@ -187,13 +185,7 @@ input:checked ~ span {
   align-items: center;
   min-height: 350px;
   flex-grow: 1;
-}
-
-.centered-container-home h1,
-h2,
-p {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
+  flex-wrap: wrap;
 }
 
 .centeredComponent {
@@ -211,10 +203,17 @@ p {
 }
 
 .containerGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-column-gap: 6px;
   grid-row-gap: 6px;
+  justify-content: center; */
 }
 
 .allWidth {
@@ -231,12 +230,12 @@ p {
   justify-items: center;
   row-gap: 0.25rem;
   grid-template-columns: 325px;
-  grid-template-rows: 12rem 5rem 5rem 3rem 5rem;
+  grid-template-rows: 12rem 5rem 1.5rem 3.5rem 2rem;
   grid-template-areas:
     "imageHome"
     "searchCompany"
-    "buttonSearch"
     "errorMessageCompany"
+    "buttonSearch"
     "advancedSearch";
 }
 
@@ -278,14 +277,15 @@ p {
 
 .summaryCompany {
   display: grid;
-  grid-template-columns: 2fr, 1fr;
+  grid-template-columns: 10rem 10rem;
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
+  padding: 1rem;
 }
 
 .borderGrey {
-  border: 2px solid var(--lgray);
+  border: 2px solid var(--gray);
   border-radius: 5px;
 }
 
@@ -294,7 +294,23 @@ p {
 }
 
 .item2 {
-  grid-column: span 2;
+  grid-column: 2;
+  margin-left: 0.5rem;
+}
+.item3 {
+  grid-column: 1;
+}
+
+.item4 {
+  grid-column: 2;
+  margin-left: 0.5rem;
+  color: var(--gray);
+}
+
+.item5 {
+  grid-column: 2;
+  margin-left: 0.5rem;
+  color: var(--gray);
 }
 
 /* ADVANCED SEARCH
@@ -382,7 +398,7 @@ p {
 }
 
 .page-footer ul li a:hover {
-  font-weight: bold;
+  color: var(--darkblue);
 }
 /* MQ
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -430,6 +446,8 @@ p {
   /* PATRI */
 
   .searchComponent {
+    margin-top: var(--space-xl);
+    margin-left: 5rem;
     display: grid;
     column-gap: 0.25rem;
     row-gap: 0.25rem;
@@ -437,9 +455,18 @@ p {
     grid-template-rows: 7rem 5rem 1.5rem;
   }
 
+  .centered-container-home {
+    margin-top: var(--space-md);
+  }
+
+  .containerGrid {
+    margin-top: var(--space-xl);
+  }
+
   .searchCompany {
     grid-column: 1;
     grid-row: 2;
+    width: 19rem;
   }
 
   .buttonSearch {
@@ -474,10 +501,11 @@ p {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: var(--space-xl);
   }
 
   .centeredComponentRate p {
-    margin-left: var(--space-xl);
+    margin-right: 1rem;
   }
 
   .minWidth {
