--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -7,6 +7,10 @@
   --lgray: #f8f8f8;
   --gray: #909090;
   --ko: #e92119;
+  --onegray: #e9e9e5;
+  --twogray: #d4d6c8;
+  --threegray: #9a9b94;
+  --fourgray: #52524e;
 
   /* font-sizes */
   --font-xs: 0.8rem;
