--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -7,9 +7,19 @@
 }
 
 .form-control.reviewCreate {
-  align-items: flex-start;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  margin: 5px 0;
+  position: relative;
+  color: var(--dark);
+}
+
+h2.marginBottom {
+  margin-bottom: 30px;
+}
+
+h2.marginTop {
+  margin-top: 30px;
 }
 
 input {
@@ -73,10 +83,19 @@ input[type="file"] {
 .next {
   position: relative;
   margin-top: 0.5rem;
+  padding: 0.4rem 2.5rem;
+  border: 2px solid var(--blue);
+  border-radius: 15px;
+  font-weight: 400;
 }
 
 .prev {
   position: relative;
+  margin-top: 0.5rem;
+  padding: 0.4rem 2.5rem;
+  border: 2px solid var(--blue);
+  border-radius: 15px;
+  font-weight: 400;
 }
 
 button:disabled {
