--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 12px;
+}
+
 body {
   font-family: "Noto Sans JP", sans-serif;
   white-space: normal;
@@ -34,14 +38,14 @@ ul {
 
 a {
   text-decoration: none;
-  font-size: 1rem;
-  font-weight: 300;
+  /* font-size: 1rem;
+  font-weight: 300; */
 }
 
 nav > a {
   text-decoration: none;
   color: inherit;
-  font-weight: 900;
+  /* font-weight: 900; */
 }
 
 .cursorPointer {
@@ -53,9 +57,14 @@ fieldset {
   padding: 0 1rem;
 }
 
+fieldset.reviewCreate {
+  border: 0;
+  padding: 0;
+}
+
 textarea {
   height: 6rem;
-  width: 22rem;
+  width: 30rem;
   border: none;
   font-family: inherit;
   padding-top: 0.25rem;
@@ -65,7 +74,7 @@ textarea.descriptionCompany {
   margin-top: 0.25rem;
   margin-bottom: 1rem;
   height: 10rem;
-  width: 22rem;
+  width: 30rem;
 }
 
 select {
@@ -109,6 +118,7 @@ select {
 
 .page-header {
   background: var(--lgray);
+  padding: 20px;
 }
 
 .page-header nav {
@@ -131,8 +141,13 @@ select {
 
 .page-header .cta-contact {
   font-family: inherit;
-  font-size: var(--font-sm);
-  padding: 5px 18px;
+  font-size: 1.1rem;
+}
+
+.page-header .cta-contact.headerFlexRow {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .header-item li label {
@@ -178,10 +193,10 @@ input:checked ~ span {
 .opacity-container.activated {
   opacity: 0.5;
 }
-
+/* 
 .centered-container div {
   max-width: 500px;
-}
+} */
 
 .centered-container p + p {
   margin-top: 10px;
@@ -301,8 +316,6 @@ input:checked ~ span {
   grid-column-gap: 1px;
   grid-row-gap: 1px;
   padding: 1rem;
-  padding-top: 2rem;
-  padding-left: 2rem;
 }
 
 .borderGrey {
@@ -358,7 +371,7 @@ span.flexRow {
 }
 
 button.advSearch {
-  margin-left: 4rem;
+  margin-left: 1rem;
   margin-top: 1.2rem;
 }
 
@@ -397,7 +410,6 @@ button.advSearch {
   display: grid;
   grid-gap: 0.25rem;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr, 1fr 1fr;
   grid-template-areas:
     "companyTitle"
     "asideCompany"
@@ -406,6 +418,8 @@ button.advSearch {
 
 .companyTitle {
   grid-area: companyTitle;
+  display: flex;
+  align-items: center;
 }
 
 .asideCompany {
@@ -416,12 +430,32 @@ button.advSearch {
   grid-area: ratingCompany;
 }
 
+button.searchFilter {
+  margin-left: 1rem;
+  margin-top: 1.2rem;
+}
+
+.diagramWidth {
+  width: 360;
+}
+
+/* LIST REVIEWS
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.reporting {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-footer {
   display: flex;
   flex-direction: column;
   background: var(--lgray);
+  padding: 20px;
 }
 
 .page-footer ul {
@@ -440,16 +474,13 @@ button.advSearch {
 .page-footer ul li a:hover {
   color: var(--darkblue);
 }
+
 /* MQ
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media screen and (min-width: 550px) {
   .page-header ul {
     width: auto;
     margin-top: 0;
-  }
-
-  .centeredComponentRate p {
-    margin-left: var(--space-xl);
   }
 
   .page-header .cta-contact {
@@ -468,22 +499,24 @@ button.advSearch {
 }
 
 @media screen and (min-width: 800px) {
-  body {
-    font-size: 1rem;
+  html {
+    font-size: 16px;
   }
+
+  /* body {
+    font-size: 1rem;
+  } */
+
+  /* HEADER */
 
   .page-main {
     padding-left: 90px;
   }
 
-  /* PATRI */
-
-  .page-header .cta-contact.flexRow {
+  .page-header .cta-contact.headerFlexRow {
     width: 20rem;
     justify-content: flex-end;
   }
-
-  /* PATRI */
 
   .searchComponent {
     margin-top: var(--space-xl);
@@ -540,13 +573,12 @@ button.advSearch {
     margin-top: var(--space-xl);
   }
 
-  .centeredComponentRate p {
-    margin-right: 1rem;
-  }
-
   .minWidth {
     min-width: 80vw;
   }
+
+  /* COMPANY
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
   .companyDetail {
     display: grid;
@@ -559,8 +591,33 @@ button.advSearch {
       "ratingCompany  none";
   }
 
+  .asideCompany {
+    border-left: 2px solid var(--onegray);
+    padding-left: var(--space-md);
+  }
+
   span.flexRow {
     display: flex;
     flex-direction: row;
+  }
+
+  button.searchFilter {
+    margin-left: 6rem;
+    margin-top: 0rem;
+  }
+
+  .diagramWidth {
+    width: 480;
+  }
+
+  /* ADVANCED SEARCH*/
+
+  .sortAndButton {
+    display: inline-block;
+  }
+
+  button.advSearch {
+    margin-left: 6.5rem;
+    margin-top: 0rem;
   }
 }
